--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
                     My name is Josh Kennedy
                 </h1>
                 <p>
-                    I am currently enrolled in Wake Tech. This is my first CTI classes. I am enjoying it and have been learniing a lot about web design and markup tools. For fun, I like to do small carpentry projects.
+                    I am currently enrolled in Wake Tech.
+                    This is my first CTI classes.
+                    I am enjoying it and have been learniing a lot about web design and markup tools.
+                    For fun, I like to do small carpentry projects.
                 </p>
 
             </body>
