--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
                 </p>
                 <p>
                     This is my first CTI classes.
+                    <img src="<img src="images/photo.jpg" alt="Your Description" width="300">
+
                 </p>
                 <p>
                     I am enjoying it and have been learniing a lot about web design and markup tools.
