--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 </p>
                 <p>
                     This is my first CTI classes.
-                    <img src="<img src="images/photo.jpg" alt="Your Description" width="300">
-
-                </p>
+                     <br>
+                   <img src="images/cybersecurity%20pic%20for%20github.jpg" alt="cybersecurity" width="300">
+               </p>
                 <p>
                     I am enjoying it and have been learniing a lot about web design and markup tools.
                 </p>
