--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 <p>
                     This is my first CTI classes.
                      <br>
-                     <img src="images/cybersecurity%20pic%20for%20github.jpg" alt="cybersecurity" width="300">
+                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Cyber_Security_Threats.jpg/800px-Cyber_Security_Threats.jpg" alt="Cybersecurity" width="400">
+
                </p>
                 <p>
                     I am enjoying it and have been learniing a lot about web design and markup tools.
