--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
                 <p>
                     This is my first CTI classes.
                </p>
-                 <br>
-                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Cyber_Security_Threats.jpg/800px-Cyber_Security_Threats.jpg" alt="Cybersecurity" width="400">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Cyber_Security_Threats.jpg/800px-Cyber_Security_Threats.jpg" 
+         alt="Cybersecurity" 
+         width="400">
+
                 <p>
                     I am enjoying it and have been learniing a lot about web design and markup tools.
                 </p>
