--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <p>
                     This is my first CTI classes.
                </p>
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Cyber_Security_Threats.jpg/800px-Cyber_Security_Threats.jpg" 
+                <img src="https://www.shutterstock.com/image-photo/glowing-digital-lock-surrounded-by-streams-2517566697" 
          alt="Cybersecurity" 
          width="400">
 
