--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
                 <p>
                     This is my first CTI classes.
                </p>
-                <img src="https://www.shutterstock.com/image-photo/glowing-digital-lock-surrounded-by-streams-2517566697" 
-         alt="Cybersecurity" 
-         width="400">
+                <img src="https://www.w3schools.com/w3images/lights.jpg" width="400" alt="Test Image">
 
                 <p>
                     I am enjoying it and have been learniing a lot about web design and markup tools.
