--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <p>
                     This is my first CTI classes.
                </p>
-                <img src="https://www.w3schools.com/w3images/lights.jpg" width="400" alt="Test Image">
+                <img src="https://github.com/jkennedy-cyber/jkennedy-cyber.github.io/blob/main/cybersecurity%20pic.jpg" width="400" alt="cybersecurity pic">
 
                 <p>
                     I am enjoying it and have been learniing a lot about web design and markup tools.
