--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
                 <h1>
                     My name is Josh Kennedy
                 </h1>
+                <img src="https://www.w3schools.com/w3images/lights.jpg" width="400" alt="Test Image">
+
                 <p>
                     I am currently enrolled in Wake Tech.
                 </p>
                 <p>
                     This is my first CTI classes.
                </p>
-                <img src="https://github.com/jkennedy-cyber/jkennedy-cyber.github.io/blob/main/cybersecurity%20pic.jpg" width="400" alt="cybersecurity pic">
-
                 <p>
                     I am enjoying it and have been learniing a lot about web design and markup tools.
                 </p>
