--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     This is my first CTI classes.
                </p>
                 <p>
-                    I am enjoying it and have been learniing a lot about web design and markup tools.
+                    I am enjoying it and have been learning a lot about web design and markup tools.
                 </p>
                 <p>
                     For fun, I like to do small carpentry projects.
