--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
                 <img src="https://www.w3schools.com/w3images/lights.jpg" width="400" alt="Test Image">
 
                 <p>
-                    I am currently enrolled in Wake Tech.
+                   I am currently enrolled in the Cybersecurity program at Wake Technical Community College.
                 </p>
                 <p>
                     This is my first CTI classes.
                </p>
                 <p>
-                    I am enjoying it and have been learning a lot about web design and markup tools.
+                    I am enjoying the program and have been learning a lot about web design, markup tools, databases, and coding. Wake Tech has knowledgeable and experienced instructors who make learning fun through creative assignments.
                 </p>
                 <p>
                     For fun, I like to do small carpentry projects.
