--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                     This is my first CTI classes.
                </p>
                 <p>
-                    I am enjoying the program and have been learning a lot about web design, markup tools, databases, and coding. Wake Tech has knowledgeable and experienced instructors who make learning fun through creative assignments.
+                    I am enjoying the program and have been learning a lot about web design, markup tools, 
+                    databases, and coding. Wake Tech has knowledgeable and experienced instructors who make learning fun through creative assignments.
                 </p>
                 <p>
                     For fun, I like to do small carpentry projects.
