--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
                    I am currently enrolled in the Cybersecurity program at Wake Technical Community College.
                 </p>
                 <p>
-                    This is my first CTI classes.
+                   This is my first CTI class — CTI-110. It’s an introductory course that covers the basics of coding, web design, and programming.
                </p>
                 <p>
-                    I am enjoying the program and have been learning a lot about web design, markup tools, 
-                    databases, and coding. Wake Tech has knowledgeable and experienced instructors who make learning fun through creative assignments.
+                    I am enjoying the program and have been learning a lot about web design, markup tools, databases, and coding.</p>
+                <p>Wake Tech has knowledgeable and experienced instructors who make learning fun through creative assignments.</p>
                 </p>
                 <p>
-                    For fun, I like to do small carpentry projects.
+                   For fun, I enjoy working on small carpentry projects, such as building tables and custom subwoofer boxes for car audio systems.
                 </p>
 
             </body>
